@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
class Employee{
    -name : String
    -birthdate : Date
    -email : String
    -phoneNumber : int
    -admission date : Date
    -taxpayerNumber : String
    -address : String
    -docNumber : String
    -jobTitle : String

+ addTaskAgenda(selectedGreenSpace : GreenSpace, selectedTask : Task, selectedDate : LocalDate, startTime : LocalTime, agenda : TaskPosition, userValidation : boolean) : Optional<Task>


}

class Task{
    -title: String
    -description: String
    -date: Date
    -taskStartPeriod: TaskPeriod
    taskExpectedDuration: int
    type: String
    greenSpace: GreenSpace
    urgency: TaskUrgency
    status: TaskStatus
    assignedTeam: Team
    assignedVehicles: List<Vehicle>
    startDate: Date
    taskPosition: TaskPosition
}


class AddEntryAgendaController{
+ getGreenSpaceRepository() : void
+ getTaskRepository() : void
+ getAuthRepository() : void
+ getUserEmail() : String
+ getGreenSpaces() : List<GreenSpace>
+ getTasksByGreenSpace (greenSpace Greenspace): List<Task>
+ getGreenSpaceList(userEmail : String) : List<GreenSpace>
+ filterGreenSpacesByManager (greenSpaces : List<GreenSpace>, managerName : String)
+ currentUserLogInValidation() : boolean
+ addTaskToAgenda (selectedTask : Task, startDate LocalDate, startTime : LocalTime) : Optional<Task>
+ initialize() : void


}

class AddEntryAgendaUI{

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEmployeeRepository() : employeeRepository
     + getGreenSpaceRepository() : getGreenSpaceRepository
     + getTaskRepository() : getTaskRepository

}
class EmployeeRepository{


+getEmployee(): Employee

}
class TasksRepository{
 +getToDoListEntries(): List<ToDoEntries>
}
class GreenSpacesRepository{
+getGreenSpacesList(): GreenSpace
}

AddEntryAgendaUI .>AddEntryAgendaController

AddEntryAgendaController .> "1" Repositories

Repositories "1" --> "1" Repositories : getInstance()
Repositories "1" --> "1" EmployeeRepository
Repositories "1" --> "1" TasksRepository
Repositories "1" --> "1" GreenSpacesRepository

AddEntryAgendaController ..>Employee

EmployeeRepository "1" --> "1" Employee
TasksRepository "1" --> "1" Employee
GreenSpacesRepository "1" --> "1" Employee

Employee --> Task: registers


@enduml